--- a/.github/workflows/Markdown-lint2-pr.yml
+++ b/.github/workflows/Markdown-lint2-pr.yml
@@ -8,12 +8,13 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-    - uses: tj-actions/changed-files@v44
+    - uses: tj-actions/changed-files@v45
       id: changed-files
       with:
         files: '**/*.md'
         separator: ","
-    - uses: DavidAnson/markdownlint-cli2-action@v16
+    - uses: DavidAnson/markdownlint-cli2-action@v19
+      continue-on-error: true
       if: steps.changed-files.outputs.any_changed == 'true'
       with:
         config: '.github/.markdownlint.json'
