--- a/.github/lychee.toml
+++ b/.github/lychee.toml
@@ -95,7 +95,7 @@ include_verbatim = true
 glob_ignore_case = false
 
 # Exclude URLs and mail addresses from checking (supports regex).
-exclude = ['.*ip:.*', '.*\$.*', '.*0\.0\.0\.0.*', 'http://ip/.*']
+exclude = ['.*ip:.*', '.*localhost.*''.*\$.*', '.*0\.0\.0\.0.*', 'http://ip/.*']
 
 # Exclude these filesystem paths from getting checked.
 exclude_path = [".github"]
