--- a/.github/workflows/create-pdf.yml
+++ b/.github/workflows/create-pdf.yml
@@ -22,6 +22,8 @@ jobs:
           
       - name: Install dependencies
         run: |
+          sudo apt update
+          sudo apt install -y xfonts-encodings xfonts-utils 
           sudo dpkg -i ttf-ms-win11-*.deb
          
       - name: Checkout gitbook-pdf-export repository
