--- a/.github/workflows/create-pdf.yml
+++ b/.github/workflows/create-pdf.yml
@@ -58,6 +58,7 @@ jobs:
       - name: "✏️ Generate release changelog"
         uses: janheinrichmerker/action-github-changelog-generator@v2.4
         with:
+          onlyLastTag: true
           token: ${{ secrets.GITHUB_TOKEN }} 
 
       - name: Set release tag
