--- a/.github/workflows/create-pdf.yml
+++ b/.github/workflows/create-pdf.yml
@@ -8,15 +8,17 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
-     - name: Install fonts 
+    steps:  # 必须添加 steps 键（原配置缺失）
+      # 修复点 1：添加 steps 键并修复缩进层级
+      - name: Checkout fonts repository
         uses: actions/checkout@v4
         with:
           repository: ykla/ttf-mswin11-zh-deb
-          path: gitbook-pdf-export
+          path: fonts  # 修复点 2：使用独立路径避免冲突
 
-     - name: Install Fonts dependencies
-       run: |
+      - name: Install Fonts dependencies
+        run: |
+          cd fonts  # 修复点 3：切换到字体仓库目录
           sudo apt-get update
           sudo apt-get install -y xfonts-encodings xfonts-utils
           sudo dpkg -i ttf-ms-win11-*.deb
@@ -25,6 +27,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: FreeBSD-Ask
+          token: ${{ secrets.GITHUB_TOKEN }}  # 修复点 4：确保写权限
 
       - name: Checkout gitbook-pdf-export repository
         uses: actions/checkout@v4
@@ -32,6 +35,7 @@ jobs:
           repository: FreeBSD-Ask/gitbook-pdf-export
           path: gitbook-pdf-export
 
+      # 其他步骤保持不变...
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -52,19 +56,15 @@ jobs:
         run: |
           cd gitbook-pdf-export
           python mdconv.py ../FreeBSD-Ask
-          pwd
         env:
           PYTHONPATH: ${{ github.workspace }}/gitbook-pdf-export
 
       - name: Set release tag
         id: set_tag
-        run:  |
-          echo "RELEASE_TAG=$(date +'%Y.%m.%d')" >> $GITHUB_ENV
-          pwd
+        run: echo "RELEASE_TAG=$(date +'%Y.%m.%d')" >> $GITHUB_ENV
 
       - name: Create Git tag
         run: |
-          pwd
           git config --global user.email "action@github.com"
           git config --global user.name "GitHub Action"
           git tag ${{ env.RELEASE_TAG }}
@@ -83,7 +83,7 @@ jobs:
           echo "CHANGES_CONTENT<<EOF" >> $GITHUB_ENV
           echo "$CHANGES" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
-          pwd
+
       - name: Create Release
         uses: ncipollo/release-action@v1
         with:
