--- a/.github/workflows/create-pdf.yml
+++ b/.github/workflows/create-pdf.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: ykla/ttf-mswin11-zh-deb
-          path: fonts-repo  # 独立路径存放字体仓库
+          path: fonts-repo
 
       - name: 安装字体依赖
         run: |
@@ -29,14 +29,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: FreeBSD-Ask
-          token: ${{ secrets.GITHUB_TOKEN }}  # 关键权限配置
-          fetch-depth: 0  # 获取完整提交历史
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
 
       - name: 检出 gitbook-pdf-export 工具
         uses: actions/checkout@v4
         with:
           repository: FreeBSD-Ask/gitbook-pdf-export
-          path: pdf-generator  # 独立工具目录
+          path: pdf-generator
 
       # ================= 初始化标签检查 =================
       - name: 检查或创建初始标签
@@ -77,19 +77,27 @@ jobs:
         id: set_tag
         run: echo "RELEASE_TAG=$(date +'%Y.%m.%d')" >> $GITHUB_ENV
 
+      - name: 获取前一个标签
+        working-directory: FreeBSD-Ask
+        run: |
+          git fetch --tags --force
+          PREVIOUS_TAG=$(git describe --tags --abbrev=0)
+          echo "PREVIOUS_TAG=$PREVIOUS_TAG" >> $GITHUB_ENV
+
       - name: 创建 Git 标签
-        working-directory: FreeBSD-Ask  # 指定关键目录
+        working-directory: FreeBSD-Ask
         run: |
           git config --global user.email "yklaxds@gmail.com"
           git config --global user.name "ykla"
           git tag ${{ env.RELEASE_TAG }}
           git push origin ${{ env.RELEASE_TAG }}
 
-      - name: 生成变更日志
+      - name: 生成增量变更日志
         uses: janheinrichmerker/action-github-changelog-generator@v2.4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           future_release: ${{ env.RELEASE_TAG }}
+          arguments: --since-tag ${{ env.PREVIOUS_TAG }}
           user: FreeBSD-Ask
           repo: FreeBSD-Ask
 
