--- a/.github/workflows/create-pdf.yml
+++ b/.github/workflows/create-pdf.yml
@@ -73,6 +73,7 @@ jobs:
       - name: 生成 PDF 文档
         run: |
           cd pdf-generator
+          sed -i '1s/.*/# 目录/' ../FreeBSD-Ask/SUMMARY.md
           python mdconv.py ../FreeBSD-Ask
         env:
           PYTHONPATH: ${{ github.workspace }}/pdf-generator
